# Agentic-hedge-fund

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pre-commit-config.yaml
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: __init__.py  demo_narrator.py  investment_committee_chair.py  model_router.py  orchestrator.py  providers.py  qwen_client.py  structured_output.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py  exceptions.py  logging.py
apps/api/app/db/: session.py
apps/api/app/evaluation/: ablation_runner.py  agent_society_advantage.py  explanation_quality.py  leakage_tests.py  metrics.py
apps/api/app/mcp_servers/: README.md  __init__.py  benchmark_server.py  common.py  compliance_server.py  market_data_server.py  portfolio_risk_server.py  trading_actions_server.py
apps/api/app/models/: domain.py
apps/api/app/observability/: metrics.py  structured_logging.py  tracing.py
apps/api/app/schemas/: agent_outputs.py  market.py  recording.py
apps/api/app/scripts/: __init__.py  seed.py  wait_for_db.py
apps/api/app/services/: actual_market_data.py  broker_service.py  compliance_service.py  context_packer.py  exchange_service.py  future_data_firewall.py  human_approval_service.py  investment_committee_service.py  ledger_service.py  orderbook.py  (+7 more)
apps/api/scripts/: generate_synthetic_market_data.py
(+119 files in other folders)
