[project]
name = "agentic-hedge-fund-api"
version = "0.1.0"
description = "FastAPI backend for the Agentic Hedge Fund simulation lab."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "openai>=1.51.0",
  "prometheus-client>=0.21.0",
  "psycopg[binary]>=3.2.2",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6",
  "websockets>=13.1",
  "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
]

[tool.uv]
dev-dependencies = [
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
strict = false
check_untyped_defs = true
warn_unused_ignores = false
disable_error_code = [
  "arg-type",
  "assignment",
  "call-overload",
  "misc",
  "no-untyped-def",
  "operator",
  "type-arg",
  "unused-ignore",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
